tests/specs/run/cts/import_export_equals/mod.mts.check.out
Check file:///[WILDLINE]/mod.mts
error: TS2345 [ERROR]: Argument of type 'string' is not assignable to parameter of type 'number'.
console.log(add(1, "test"));
                   ~~~~~~
    at file:///[WILDLINE]/mod.mts:3:20
